RESOLVED FIXED157042
[WinCairo][ANGLE] Display object is not created.
https://bugs.webkit.org/show_bug.cgi?id=157042
Summary [WinCairo][ANGLE] Display object is not created.
peavo
Reported 2016-04-26 13:49:29 PDT
The CreateDisplayFromAttribs function will not create a DisplayD3D object when the requested type is EGL_PLATFORM_ANGLE_TYPE_DEFAULT_ANGLE, because ANGLE_ENABLE_OPENGL is not defined. We should be able to create a DisplayD3D object without defining ANGLE_ENABLE_OPENGL.
Attachments
Patch (1.85 KB, patch)
2016-04-26 13:53 PDT, peavo
no flags
peavo
Comment 1 2016-04-26 13:53:48 PDT
WebKit Commit Bot
Comment 2 2016-04-26 13:55:04 PDT
Note that there are important steps to take when updating ANGLE. See http://trac.webkit.org/wiki/UpdatingANGLE
peavo
Comment 3 2016-04-26 13:58:15 PDT
Thanks for reviewing!
WebKit Commit Bot
Comment 4 2016-04-26 14:46:54 PDT
Comment on attachment 277407 [details] Patch Clearing flags on attachment: 277407 Committed r200107: <http://trac.webkit.org/changeset/200107>
WebKit Commit Bot
Comment 5 2016-04-26 14:46:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.