[WinCairo][ANGLE] Display object is not created. https://bugs.webkit.org/show_bug.cgi?id=157042

Reviewed by Alex Christensen.

The CreateDisplayFromAttribs function will not create a DisplayD3D object when the requested
type is EGL_PLATFORM_ANGLE_TYPE_DEFAULT_ANGLE, because ANGLE_ENABLE_OPENGL is not defined.
We should be able to create a DisplayD3D object without defining ANGLE_ENABLE_OPENGL.

* src/libANGLE/Display.cpp:


Canonical link: https://commits.webkit.org/175162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200107 268f45cc-cd09-0410-ab3c-d52691b4dbfc